jscomp/syntax/tests/parsing/errors/typeDef/recordDocComment.res
type a = {
  foo: string, /** here */
}
